test/fail/invalid_typ_formal.cll
<Foo f:none>{ null; };
0;
